- fix swim attribute - fix colors in palette